--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@rails/webpacker": "3.5",
     "@react-google-maps/api": "^2.17.0",
     "babel-loader": "^8.0.6",
+    "lodash": "^4.17.21",
     "prop-types": "~15.6.0",
     "react": "~16.8.0",
     "react-dom": "~16.8.0",
